<resources>
    <string name="app_name">Music Player App</string>
    <string name="full_name">Full Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="remainingTime">- %1$s</string>
    <string name="home">Home</string>
    <string name="file_music">File Music</string>
    <string name="sync">Sync</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="example_email">example@example.com</string>
    <string name="song_image">Song Image</string>
    <string name="play_button">Play Button</string>
    <string name="volume_down">Volume Down</string>
    <string name="volume_up">Volume Up</string>
</resources>