<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/file_music"
        android:icon="@drawable/music"
        android:title="@string/file_music"/>
    <item
        android:id="@+id/sync"
        android:icon="@drawable/sync"
        android:title="@string/sync"/>
    <item
        android:id="@+id/trash"
        android:icon="@drawable/delete"
        android:title="@string/trash"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/setting"
        android:title="@string/settings"/>
    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/login"
                android:title="@string/login"
                android:icon="@drawable/login" />
        </menu>
    </item>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:title="@string/share"
                android:icon="@drawable/share" />
            <item
                android:id="@+id/rate_us"
                android:title="@string/rate_us"
                android:icon="@drawable/rate" />
        </menu>
    </item>

</menu>